force-app/main/default/objects/Business_Unit_Branding__c/Business_Unit_Branding__c.object-meta.xml
<CustomObject>
  <label>Business Unit Branding</label>
  <pluralLabel>Business Unit Brandings</pluralLabel>
  <nameField>
    <type>Text</type>
    <label>Business Unit Branding</label>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>