force-app/main/default/objects/Business_Unit_Branding__c/fields/Accent_Color__c.field-meta.xml
<CustomField>
    <fullName>Accent_Color__c</fullName>
    <description>hex format- ie. #004ffe</description>
    <inlineHelpText>ex format- ie. #004ffe</inlineHelpText>
    <label>Accent Color Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>