force-app/main/default/objects/Business_Unit_Branding__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>Business Unit Branding</relationshipLabel>
    <relationshipName>Business_Unit_Business_Unit_Branding</relationshipName>
    <type>Lookup</type>
</CustomField>