force-app/main/default/objects/Business_Unit_Branding__c/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <inlineHelpText>Public link to logo image (used in PDF/email templates)</inlineHelpText>
    <label>Logo URL</label>
    <type>Url</type>
</CustomField>